--- a/themes/hugo-lithium-theme-master/exampleSite/config.toml
+++ b/themes/hugo-lithium-theme-master/exampleSite/config.toml
@@ -1,11 +1,10 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Aaron's Analytics Blog"
+title = "A Hugo website"
 theme = "hugo-lithium-theme"
 googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
-relativeurls=true
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
@@ -15,13 +14,10 @@ relativeurls=true
     url = "/about/"
 [[menu.main]]
     name = "GitHub"
-    url = "https://github.com/amiles2233"
+    url = "https://github.com/rstudio/blogdown"
 [[menu.main]]
     name = "Twitter"
-    url = "https://twitter.com/_aaronmiles"
-[[menu.main]]
-    name = "LinkedIn"
-    url = "http://linkedin.com/in/aaronrmiles"
+    url = "https://twitter.com/rstudio"
 
 [params]
     description = "A website built through Hugo and blogdown."
