--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Aaron's Analytics Blog"
+title = "Data Science Dojo"
 theme = "hugo-lithium-theme"
 googleAnalytics = ""
 disqusShortname = ""
@@ -15,16 +15,13 @@ relativeurls=true
     url = "/about/"
 [[menu.main]]
     name = "GitHub"
-    url = "https://github.com/amiles2233"
+    url = "https://github.com/rstudio/blogdown"
 [[menu.main]]
     name = "Twitter"
-    url = "https://twitter.com/_aaronmiles"
-[[menu.main]]
-    name = "LinkedIn"
-    url = "http://linkedin.com/in/aaronrmiles"
+    url = "https://twitter.com/rstudio"
 
 [params]
-    description = "My analytics playground."
+    description = "Aaron's Analytics Playground."
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.11.0"
