--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseurl = "https://amiles.netlify.com/"
 languageCode = "en-us"
 title = "Aaron Miles"
 theme = "hugo-lithium-theme"
-googleAnalytics = ""
+googleAnalytics = "UA-110081213-1"
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 relativeurls=true
