--- a/config.toml
+++ b/config.toml
@@ -32,8 +32,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   archive = "archives"
 
 [author]
-  name = "Aaron Miles",
-  bio = "My data science-related musings"
+  name = "Aaron Miles"
+  bio = "I'm a data scientist who works at the Columbus Collaboratory, and an avid R user. \n\n My interests include sports (playing, watching, and fantasy), politics, finance, and that'll be the focus of what I write here. \n\n I live in Columbus, OH with my wife, two sons, dog, and rabbit"
   job = "Data Scientist"
   location = "Columbus, Ohio"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
