--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@
 # For developpers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
-baseurl = "https://amiles.netlify.com/"
+baseurl = "https://amiles.netlify.app/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Aaron's Analytics Blog"
@@ -35,7 +35,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
   name = "Aaron Miles"
   bio = "I'm a free agent data scientist, and an avid R user. \n\n My interests include sports (playing, watching, and fantasy), politics, finance, and that'll be the focus of what I write here. \n\n I live in San Diego, CA with my wife, two sons, and dog"
   job = "Data Scientist"
-  location = "Columbus, Ohio"
+  location = "San Diego, CA"
   # Your Gravatar email. Overwrite `author.picture` everywhere in the blog
   gravatarEmail = "amiles2233@gmail.com"
   # Your profile picture
